--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,11 @@
 // required for angular material
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
 
 // this is now included in html file cdn
 // @import '~bootstrap/dist/css/bootstrap.css';
-@import "~font-awesome/css/font-awesome.css";
+@import '~font-awesome/css/font-awesome.css';
+
+@import '~bootstrap/dist/css/bootstrap.min.css';
 
 $theme-color: #008000;
 $theme-color-hover: #b1c522;
@@ -19,7 +21,7 @@ h3 {
   margin-bottom: 1.5rem;
 }
 
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
 
 .navbar-dark .navbar-brand {
   color: $theme-color;
